--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1691,107 +1691,107 @@ stories:
   domain: http://www.sanmarcosrecord.com/
   link: https://www.sanmarcosrecord.com/news/texas-barbershop-worker-shot-over-childs-haircut-police-say
 images:
-- name: redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-- name: windowmountain-window-mountain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crafty-painting.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: copper-circuit-IMG_7831.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7831.jpg
-- name: bf-skinner-steam-engine-iceland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-steam-engine-iceland.jpg
-- name: mistywoods-babyfoot-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-satan-red.jpg
-- name: old-gas-pumps-oldgaspumps-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-clean-view.jpg
-- name: adam-smith-adam-smith-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-graham-sutherland.jpg
-- name: oldhotel-oldhotel-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-wols.jpg
-- name: mistywoods-babyfoot-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-three.jpg
-- name: bf-skinner-graffitti-red-hat-man.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-graffitti-red-hat-man.jpg
-- name: store-on-corner-store-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
-- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-- name: yosemite-yosemite-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-electricity.jpg
-- name: oldhotel-oldhotel-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-space-pizza.jpg
-- name: ellis-island-ellis-island-room-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-paper.jpg
-- name: wreck-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_4833.jpg
-- name: carry-load-carryload-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
-- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
-- name: braceros-domingo-ulloa-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-broken-piano-street.jpg
-- name: bf-skinner-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bletchley-computer-racks.jpg
-- name: downtown-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crafty-painting.jpg
-- name: oldhouse-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-dream.jpg
-- name: eduardo-eduardo-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-oily-mcoilface.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-soul.jpg
-- name: nyc-flag-nycflag-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-storm.jpg
-- name: oldhousecars-house-old-cars-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
-- name: rain-princess-IMG_7954.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7954.jpg
-- name: gypsymosaic-gypsy-eyes-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purp-paper.JPG
-- name: nazi-invasion-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-destruction-seattle-viaduct.jpg
-- name: old-school-house-old-schoolhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-neo-instinct.jpg
-- name: trucksilo-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-- name: store-on-corner-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
-- name: mosaic-face-mosaic-face-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-pond.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-- name: stalin-time-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-building-trees-sky.jpg
-- name: oldsmallboat-oldsmallboat-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-gred-mash.jpg
-- name: old-gas-pumps-oldgaspumps-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-blocks.jpg
-- name: mistywoods-babyfoot-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-color.jpg
-- name: blossombar-colorful-blocks-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-50-62.jpg
-- name: oldhotel-oldhotel-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-rain.jpg
-- name: bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-- name: gypsymosaic-gypsy-eyes-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-dream.jpg
-- name: old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-- name: amusement-park-amusement-park-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colored-circuits.jpg
-- name: bordercrossing-bordercrossing-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-cinnamon-rolls.jpg
-- name: old-building-clouds-with-tree-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-copper-circuit.jpg
-- name: white-house-lawn-white-house-lawn-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
-- name: server-cloud-server-racks-clouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-constitution.jpg
+- name: bluelake-plentiful-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-00-00.jpg
+- name: oldcabin-oldcabin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
+- name: supreme-court-supremecourt-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smooth-ride.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
+- name: liberty-back-statue-liberty-back-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
+- name: supreme-court-supremecourt-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-space-pizza.jpg
+- name: yosemite-yosemite-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
+- name: art-lange-otto-the-mocking-of-christ.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-lange-otto-the-mocking-of-christ.jpg
+- name: catacombs-catacombs-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-collage.jpg
+- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
+- name: paris-paris-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
+- name: old-granary-field-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-cinnamon-rolls.jpg
+- name: blossombar-colorful-blocks-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-24-99.jpg
+- name: copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
+- name: art-museum-art-museum-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
+- name: downtheline-downtheline-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-space-pizza.jpg
+- name: power-lines-power-lines-empty-space-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
+- name: nazi-invasion-hallway-long-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-long-hospital.jpg
+- name: statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+- name: mistywoods-babyfoot-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-constitution.jpg
+- name: old-door-lock-old-door-lock-2-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dali-two.jpg
+- name: legal-statue-legalstatue-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
+- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
+- name: downtown-los-angeles-downtown-la-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
+- name: braceros-domingo-ulloa-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-building-trees-sky.jpg
+- name: bf-skinner-butterfly-on-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-on-flower.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
+- name: abandonedbuildings_green_zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_green_zuma.jpg
+- name: border-fence-border-fence-on-hill-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-rainbow-festival.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
+- name: oldbarn-oldbarn-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sunday.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
+- name: old-door-lock-old-door-lock-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colored-circuits.jpg
+- name: aws-s3-stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-aqua.jpg
+- name: old-cabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
+- name: meadowbutterfly-meadow-butterfly-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-creativity.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-storm.jpg
+- name: eduardo-eduardo-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
+- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
+- name: stories-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
+- name: oldhousecars-house-old-cars-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
+- name: rockingchair-face-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-atari-asteroids.jpg
+- name: braceros-domingo-ulloa-crow-stailess-steal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-crow-stailess-steal.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
+- name: gypsy-wagon-gypsywagon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
+- name: oldhousecars-house-old-cars-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-creativity.jpg
+- name: old-house-oldhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gan-vogh.jpg
 ---
 Why Your Next Downtown Lunch Should Be At Partenope Ristorante.&nbsp;Meet The Virginia Press Foundation Board Members And Executive Committee.&nbsp;Hoosiers Urged To Practice Ice Safety.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Myers Road Traffic Light Needs Power.&nbsp;Family Has Reason For Thanks.&nbsp;Drugs Seized After State Trooper Checks Disabled Vehicle.&nbsp;SunRail Back On Time After Downed Power Line Causes Delays.&nbsp;
